--- a/findly-builder/src/app/components/content-source/content-source.component.scss
+++ b/findly-builder/src/app/components/content-source/content-source.component.scss
@@ -20,45 +20,10 @@
     }  
 }
 .contentContainer{
-    padding-left: 15px;
-    padding-top: 15px;
-    padding-right: 15px;   
-    // height: calc(100vh);
-    height: calc(100vh - 50px);
-    background: #f2f3f5;
-    overflow: auto;
-    height: calc(100vh);
+   padding: 30px 65px 0 70px;
+    height: calc(100vh - 62px);
+    overflow: hidden;    
     background: #fff;
-    .kr-sg-button-primary {
-        position: absolute;
-        right: 25px;
-        height: 35px;
-        font-size: 14px;
-        display: inline-block;
-    }
-    .addNewSource{        
-        .label-text{
-            font-weight: bold;
-        }
-        .crerateWebCrawl{
-            width: 70%;
-            padding: 0 10px;
-            .buttonFooter{
-                position: fixed;
-                width: calc(100% + 37px);
-                background-color: #fff;
-                left: 55px;
-                bottom: 0;
-                padding: 10px;
-                padding-left: 200px;               
-            }
-        }
-    }    
-    .imageDiv{
-        img{
-            width: 100px;
-        }
-    }
     .kr-sg-data-table section.table-content .content-body{
         cursor: pointer;
     }
@@ -76,25 +41,87 @@
               }
             .last-child {
                 max-width: 90px !important;
-               }
+            }
         }
     }
     .table-list-content{
         .kr-sg-data-table{
             .table-action-header{
-                .kr-sg-input-search{
-                    margin: 0;
-                    width: 250px;
+                justify-content: flex-end;
+                height: auto;
+                background: #F8F9FA;
+                padding: 5px 30px;
+                border-radius: 4px; 
+                margin: 0 15px 0 10px;               
+                .search{
+                    margin-left: 15px;
+                    .search-name{
+                        img{
+                            margin-right: 5px;
+                            position: relative;
+                            top: -1px;
+                        }
+                    }
+                }
+                .kr-sg-dropdowns{
+                    width: 124px;
+                    margin-left: 15px;
+                    .dropdown-open{
+                        &.show{
+                            background: #fff;
+                            .dropdown-input{
+                                border: 1px solid #E4E5E7;
+                            }
+                        }
+                        .dropdown-input{
+                            font-size: 12px;
+                            padding: 0 15px;
+                            border: 1px solid transparent;
+                            background: transparent;
+                            border-radius: 4px;
+                            img{
+                                margin-right: 6px;
+                                position: relative;
+                                top: -1px;
+                            }
+                            &::before{
+                                display: none;
+                            }
+                            &::after{
+                                display: none;
+                            }
+                        }
+                        .content-menu{
+                            box-shadow: 0px 10px 35px rgba(32, 33, 36, 0.2);
+                            width: 140px;
+                            top: 3px !important;
+                            min-width: 140px;
+                            padding: 10px 20px;
+                            li{
+                                font-size: 13px;
+                                color: #202124;
+                                padding: 8px 0;
+                                cursor: pointer;
+                            }
+                        }
+                    }
+                }
+                .grid-list-view-table{
+                    margin-left: 15px;
+                    cursor: pointer;
                 }
             }  
             .table-content{
-                margin-top: 12px;
+                margin-top: 25px;      
+                padding: 0 15px 0 10px;          
                 .table-header{
-                    background: #f3f3f4;
-                    border-bottom: 1px solid #e5e8ec;
+                    background: #fff;
+                    border-bottom: 1px solid #E4E5E7;
+                    color: #9AA0A6;
                     .col{
-                        font-weight: bold;
-                        color: #26344a;
+                        font-weight: 500;                       
+                        color: #9AA0A6;
+                        font-size: 12px;                        
                     }
                 }
                 .col{
@@ -106,17 +133,103 @@
                     }
                 }
                 .content-body{
+                    padding: 9px 0;
+                    border-bottom: 1px solid #E4E5E7;
+                    .col{
+                        color: #202124;
+                        font-size: 14px;
+                        &.success{
+                            color: #28A745;
+                        }
+                        &.in-progress{
+                            color: #0D6EFD;
+                        }
+                        &.failed{
+                            color: #DD3646;
+                        }
+                    }
                     &:hover{
+                        background: #F8F9FA;
                         .action_icon{
                             visibility: visible;
                         }
                     }
                 }
+            }
+            .list-view-data{
+                .row_list{
+                    margin: 10px 0 0 0 !important;
+                    .box-content{
+                        padding: 10px;
+                        text-align: center;
+                        .box{
+                            background: #FFFFFF;
+                            border: 1px solid #BDC1C6;
+                            box-sizing: border-box;
+                            border-radius: 6px;
+                            width: 225px;
+                            height: 225px;
+                            padding: 25px 0;
+                            cursor: pointer;
+                            .title{
+                                color: #202124;
+                                font-weight: 500;
+                                font-size: 16px;
+                                margin-bottom: 24px;
+                            }
+                            .type{
+                                background: #0D6EFD;
+                                border-radius: 2px;
+                                padding: 3px 0;
+                                width: 76px;
+                                margin: 0 auto;
+                                color: #FFFFFF;
+                                font-size: 12px;
+                                margin-bottom: 30px;
+                                text-transform: uppercase;
+                                &.doc{
+                                    background: #28A745;
+                                }
+                            }
+                            .status-data{
+                                .status-info{
+                                    padding-top: 12px;
+                                    .status-name{
+                                        font-size: 12px;
+                                        font-weight: normal;
+                                        margin-top: 10px;
+                                    }
+                                }
+                                .count-pages{
+                                    color: #9AA0A6;
+                                    font-size: 12px;
+                                    .pagelength{
+                                        font-weight: 500;
+                                        font-size: 20px;
+                                        color: #202124;
+                                    }
+                                }
+                                .created-date{
+                                    margin-top: 32px;
+                                    color: #9AA0A6;
+                                    font-size: 12px;
+                                }
+                            }                            
+                        }
+                    }
+                }
             }          
+        }
+        .table-scroll-perfect{
+            height: calc(100vh - 214px);
+            &.list{
+                height: calc(100vh - 136px);
+            }
         }
     }   
 }
-::ng-deep:perfect-scrollbar .ps-content{
+
+::ng-deep perfect-scrollbar .ps-content{
     .empty{
         display: none;
         text-align: center;
@@ -335,9 +448,8 @@
                                             padding-left: 5px;
                                             cursor: pointer;
                                         }
-                                    }
-                                   
-                                    }
+                                    }                                   
+                                }
                             }
                         }
                     }
