--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -1,5 +1,5 @@
 
-<div class="contentContainer" [ngClass]="{'fullHeight':!selectedSourceType || (selectedSourceType && (selectedSourceType.resourceType === 'manual'))}">
+<div class="contentContainer" [ngClass]="{'fullHeight':!selectedSourceType || (selectedSourceType && (selectedSourceType.resourceType === 'manual')),'modalBody':resourceIDToOpen}">
   <h4 *ngIf="resourceIDToOpen" class="header-title"><img src="assets/images/closeCross.png" class="closeCross" (click)='cancleSourceAddition()'></h4>
   <perfect-scrollbar>
     <div class="h-100 position-relative addNewSource">
@@ -19,8 +19,7 @@
       </div>
       <!-- FAQ Extract Doc-->
       <div *ngIf="selectedSourceType" class="crerateWebCrawl" [ngClass]="{'pr-0': resourceIDToOpen}">
-        <div class="crawl-form-title" *ngIf="(selectedSourceType.sourceType==='faq') || (selectedSourceType.resourceType === 'webdomain')">Crawl Web Domain</div>
-        <div class="crawl-form-title" *ngIf="(selectedSourceType.sourceType==='faq') || (selectedSourceType.resourceType==='document')">Upload File</div>
+        <div class="crawl-form-title" >{{selectedSourceType.name}}</div>
         <app-add-faq (addFaq)="addManualFaq($event)" (cancelfaqEvent)="selectedSourceType = null" *ngIf="selectedSourceType.resourceType === 'manual'"></app-add-faq>  
         <form #sourceCreation="ngForm" *ngIf="selectedSourceType.resourceType !== 'manual'">
           <div class="kr-sg-input-text mb-4">
