--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -755,12 +755,15 @@
         width: 3px !important;
     }
 }
-::ng-deep.faqSourceListing{
+::ng-deep.addSourceModalComponent{
     .modal-header {
         padding: 20px 20px 0px;
         .header-title{
             position: absolute;
-            left: 12px;
+            left: 17px;
+            .closeCross{
+                cursor: pointer;
+            }
         }
         .table-action-header {
             height: 50px;
