--- a/findly-builder/src/app/components/manage-intent/manage-intent.component.html
+++ b/findly-builder/src/app/components/manage-intent/manage-intent.component.html
@@ -139,7 +139,7 @@
 </div>
 
 
-<div class="manage-form-please-wait-all" *ngIf="loading" [@fadeInOutAnimation]>
+<div class="mainLoadingSpinner" *ngIf="loading" [@fadeInOutAnimation]>
   <mat-spinner diameter="18" strokeWidth="2"></mat-spinner>
   <span class="please-wait-message">Please Wait!</span>
 </div>
