--- a/findly-builder/src/app/components/summary/summary.component.html
+++ b/findly-builder/src/app/components/summary/summary.component.html
@@ -142,7 +142,7 @@
     </div>
 </perfect-scrollbar>
 
-<div class="manage-form-please-wait-all" *ngIf="loading" [@fadeInOutAnimation]>
+<div class="mainLoadingSpinner" *ngIf="loading" [@fadeInOutAnimation]>
   <mat-spinner diameter="18" strokeWidth="2"></mat-spinner>
   <span class="please-wait-message">Please Wait!</span>
 </div>
